--- a/src/main/resources/static/forms/say-hello.html
+++ b/src/main/resources/static/forms/say-hello.html
@@ -1,3 +1,7 @@
 <form>
 	<h1>Hello Admin</h1>
+
+	<input type="text"
+		   cam-variable-name="anzahlTage"
+		   cam-variable-type="Long" />
 </form>
